# backend-user-message-analyzer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: application.py  main.py  router.py  settings.py
app/file/: __init__.py  schemas.py  services.py  views.py
app/helpers/: schemas.py
app/user/: __init__.py  schemas.py  services.py  views.py
scripts/: between-msgs.sh  max-min-size.sh  order-by-username.sh
tests/: test_first.py
